kubernetes/php-service.yml
apiVersion: v1
kind: Service
metadata:
  name: php-service
  namespace: presta
spec:
  selector:
    app: presta
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: newingress
  namespace: presta
  labels:
    name: newingress
spec:
  rules:
  - host: presta.com
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: php-service
            port: 
              number: 80
