kubernetes/presta-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: myingress
  namespace: presta
  annotations:
    kubernetes.io/ingress.class: ingress-nginx
spec:
  rules:
  - host: presta.com
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: php-service
            port: 
              number: 3000
